// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs WHEN config sets enablePrettyRefs false AND note overrides to true THEN renders with pretty refs (enableExperimentalIFrameNoteRef) 1`] = `
VFile {
  "contents": "<h1 id=\\"with-override\\">With Override<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#with-override\\"></a></h1>
<p></p><p><iframe class=\\"noteref-iframe\\" src=\\"/refs/bar---0\\" title=\\"Reference to the note called Bar\\">Your browser does not support iframes.</iframe></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs WHEN config sets enablePrettyRefs false AND note overrides to true THEN renders with pretty refs 1`] = `
VFile {
  "contents": "<h1 id=\\"with-override\\">With Override<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#with-override\\"></a></h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Bar</span></div>

</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar body</p>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs WHEN config sets enablePrettyRefs true AND note overrides to false THEN renders without pretty refs 1`] = `
VFile {
  "contents": "<h1 id=\\"with-override\\">With Override<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#with-override\\"></a></h1>
<p></p><p></p><p>bar body</p><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs config.enablePrettyRef: false 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><p>bar body</p><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs config.enablePrettyRef: true 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Bar</span></div>
<a href=\\"bar\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar body</p>
</div></div><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs config.publishing.enablePrettyRef: false 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#foo\\"></a></h1>
<p></p><p></p><p>bar body</p><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"/notes/foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs config.publishing.enablePrettyRef: true (enableExperimentalIFrameNoteRef) 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#foo\\"></a></h1>
<p></p><p><iframe class=\\"noteref-iframe\\" src=\\"/refs/bar---0\\" title=\\"Reference to the note called Bar\\">Your browser does not support iframes.</iframe></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"/notes/foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs config.publishing.enablePrettyRef: true 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#foo\\"></a></h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Bar</span></div>

</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar body</p>
</div></div><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"/notes/foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs enablePrettyRef defaults to true in both cases (enableExperimentalIFrameNoteRef) 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Bar</span></div>
<a href=\\"bar\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar body</p>
</div></div><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs enablePrettyRef defaults to true in both cases (enableExperimentalIFrameNoteRef) 2`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#foo\\"></a></h1>
<p></p><p><iframe class=\\"noteref-iframe\\" src=\\"/refs/bar---0\\" title=\\"Reference to the note called Bar\\">Your browser does not support iframes.</iframe></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"/notes/foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs enablePrettyRef defaults to true in both cases 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Bar</span></div>
<a href=\\"bar\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar body</p>
</div></div><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) enablePrettyRefs enablePrettyRef defaults to true in both cases 2`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#foo\\"></a></h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Bar</span></div>
<a href=\\"/notes/bar\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar body</p>
</div></div><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"/notes/foo.ch1\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: false THEN not rendered: PREVIEW 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags</h1>
<p>has fm tags</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: false THEN not rendered: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#fmtags\\"></a></h1>
<p>has fm tags</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN not rendered when missing: PREVIEW 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags</h1>
<p>has no fm tags</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN not rendered when missing: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#fmtags\\"></a></h1>
<p>has no fm tags</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: multiple tags, PREVIEW 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags</h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags</h2>
<ol>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #9e3623;\\" href=\\"tags.first\\">first</a></li>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #b1d1fc;\\" href=\\"tags.second\\">second</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: multiple tags, PREVIEW 2`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags</h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags</h2>
<ol>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #9e3623;\\" href=\\"tags.first\\">first</a></li>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #b1d1fc;\\" href=\\"tags.second\\">second</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: multiple tags, PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#fmtags\\"></a></h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#tags\\"></a></h2>
<ol>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">first (Private)</a></li>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">second (Private)</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: multiple tags, PUBLISHING 2`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#fmtags\\"></a></h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#tags\\"></a></h2>
<ol>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">first (Private)</a></li>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">second (Private)</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: single tag, PREVIEW 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags</h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags</h2>
<ol>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #9e3623;\\" href=\\"tags.first\\">first</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: single tag, PREVIEW 2`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags</h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags</h2>
<ol>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #9e3623;\\" href=\\"tags.first\\">first</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: single tag, PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#fmtags\\"></a></h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#tags\\"></a></h2>
<ol>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">first (Private)</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true THEN rendered when available: single tag, PUBLISHING 2`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#fmtags\\"></a></h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#tags\\"></a></h2>
<ol>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">first (Private)</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true WHEN enableHashesForFMTags: true THEN rendered with a hashtag(#): PREVIEW 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags</h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags</h2>
<ol>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #9e3623;\\" href=\\"tags.first\\">#first</a></li>
<li><a class=\\"color-tag\\" style=\\"--tag-color: #b1d1fc;\\" href=\\"tags.second\\">#second</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) frontmatter tags GIVEN enableFrontmatterTags: true WHEN enableHashesForFMTags: true THEN rendered with a hashtag(#): PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id=\\"fmtags\\">Fmtags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#fmtags\\"></a></h1>
<p>has fm tags</p>
<hr>
<h2 id=\\"tags\\">Tags<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#tags\\"></a></h2>
<ol>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">#first (Private)</a></li>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">#second (Private)</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) in IMPORT mode 1`] = `
VFile {
  "contents": "Testing publishing in IMPORT mode

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference WHEN refs are back to back THEN render all 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo1</span></div>
<a href=\\"foo1\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
</div></div><p></p> <p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo2</span></div>
<a href=\\"foo2\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference WHEN refs are right on the next line THEN render all 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo1</span></div>
<a href=\\"foo1\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
</div></div><p></p>
<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo2</span></div>
<a href=\\"foo2\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
</div></div><p></p>
<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo3</span></div>
<a href=\\"foo3\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference assume vault 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo</span></div>
<a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>foo in vault2</p>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference basic 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo</span></div>
<a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference fail: ambiguous 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#ref\\"></a></h1>
<p></p><blockquote>
Error rendering note reference. There are multiple notes with the name dupe. Please specify the vault prefix.
</blockquote><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference fail: wildcard no match 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><blockquote>
Error rendering note reference. There are no matches for \`baz.*\`.
</blockquote><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference fail: with vault prefix 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><blockquote>
No note with name bar found in cache during parsing.
</blockquote><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference nonexistent 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><blockquote>
No note with name bar found in cache during parsing.
</blockquote><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference ok: ambiguous but duplicateNoteBehavior set 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Dupe</span></div>
<a href=\\"dupe\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>dupe in vault1</p>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference ok: wildcard 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">One</span></div>
<a href=\\"bar.one\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar one</p>
</div></div><p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Two</span></div>
<a href=\\"bar.two\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar two</p>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference ok: wildcard 2`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">One</span></div>
<a href=\\"bar.one\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar one</p>
</div></div><p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Two</span></div>
<a href=\\"bar.two\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>bar two</p>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference ok: with vault prefix 1`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo</span></div>
<a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>foo in vault2</p>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) note reference ok: with vault prefix 2`] = `
VFile {
  "contents": "<h1 id=\\"ref\\">Ref</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo</span></div>
<a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>foo in vault2</p>
</div></div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) prefix imagePrefix 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p><img src=\\"/image-url.jpg\\" alt=\\"alt-text\\"></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub (old tests - need to be migrated) prefix imagePrefix with forward slash 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\">Foo</h1>
<p><img src=\\"/image-url.jpg\\" alt=\\"alt-text\\"></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`GIVEN dendronPub WHEN all notes are public WHEN publishing links to task notes THEN all links are rendered 1`] = `
VFile {
  "contents": "<h1 id=\\"beta\\">Beta<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#beta\\"></a></h1>
<p><a href=\\"/notes/alpha.task\\"><input type=\\"checkbox\\" disabled class=\\"task-before task-status\\" checked>Task<span class=\\"task-after task-priority\\">priority:high</span><span class=\\"task-after task-due\\">due:2022-08-28</span><span class=\\"task-after task-owner\\">@turing</span></a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
